# XetPlus

./: .gitignore  .gitignore_cleanup  CODE_REVIEW_2026-06-21.md  P0_TEST_REPORT.md  PROJECT_STATUS_FINAL.md  README.md  README_CN.md  SESSION_SUMMARY_2026-06-21_XET_DETECTION.md  TEST_SUITE_ROADMAP.md  WORK_SUMMARY_2026-06-21.md  WORK_SUMMARY_FINAL_2026-06-21.md  XETPLUS_COMPLETE_COMPARISON.md  XETPLUS_VS_XETPY_COMPARISON.md  XET_DETECTION_FIX_SUMMARY.md  XET校验问题.md  cleanup_git.sh  conftest.py  doh_test_results.json  pyproject.toml  test_all_ips.py  test_cli_download_basic.sh  test_cli_p3_integration.sh  test_doh_with_proxy.py  xetplus.7z  修改计划.md  待修问题.md  检查线索.md  设计审查.md
archive/: README.md
archive/debug_materials/: COMPLETE_FIX_SUMMARY.md  analyze_offset_bug.py  reconstruction.json  test_fix.py  test_non_contiguous.py  xorb_analysis.json
archive/debug_scripts/: debug_chunk_cache.py  debug_chunk_logic.py  debug_simple.py  debug_xet_detection.py  download_debug_materials.py  test_auto_fallback.py  test_chunk_cache_integration.py  test_chunk_logic.py  test_e2e.py  test_fallback_simulation.py  test_get_latest_commit.py  test_host_optimizer.py  test_revision_fix.py  verify_revision_fix.py
archive/old_reports/: CHUNK_CACHE_FIX_COMPLETION.md  CLEANUP_PLAN.md  CLI_TEST_PLAN.md  COMPLETION_SUMMARY.md  FINAL_REPORT_2026-06-21.md  PROJECT_STATUS.txt  VISUAL_IMPROVEMENTS_SUMMARY.md
archive/test_scripts/: test_2_7_only.sh  test_batch_json.sh  test_cli_p0_core_v2.sh  test_cli_p1_advanced.sh  test_cli_p2_advanced.sh  test_cli_p2_fixed.sh  test_fixes.sh  test_hf_endpoint.sh
docs/: CAS_API_DEBUG.md  CONFIG_COMMAND_TEST_IMPROVEMENTS.md  DEVELOPMENT_LOG.md  FIX_SUMMARY_20260621.md  Git仓库清理记录.md  HuggingFace与hf-mirror对比.md  INDEX.md  ISSUES.md  LOGGING_FIX_SUMMARY.md  P3_INTEGRATION_TEST_REPORT.md  P3集成测试报告.md  PARALLEL_WRITE_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  ROADMAP.md  TESTING_GUIDE.md  TODO.md  XET_Hash提取方法.md  XET_METADATA_EXTRACTION_IMPROVEMENTS.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  phase5-design.md  shard_api_spec.md  国内HF镜像站与替代平台指南.md  文档索引.md  架构设计.md  用户指南.md  网络选项指南.md  贡献指南.md  配置参考.md
docs/archive/: CACHE_DESIGN_ANALYSIS.md  CAS_IMPLEMENTATION_ALIGNMENT_CHECK.md  CHUNK_CACHE_IMPLEMENTATION.md  CHUNK_CACHE_QUICKSTART.md  CHUNK_CACHE_REFACTOR_PLAN.md  CLI_IMPROVEMENTS.md  CLI_IMPROVEMENTS_FINAL.md  CLI_IMPROVEMENTS_SUMMARY.md  DESIGN_COMPARISON.md  (+26 more)
tests/: __init__.py  test_chunk_disk_cache.py  test_config_manager.py  test_global_writer.py
xet/: __init__.py  __version__.py
(+85 files in other folders)
